--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
     </h1>
   </div>
 
-  <%render 'shared/error_messages', model: f.object %>
+  <%=render 'shared/error_messages', model: resource %>
 
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -74,8 +74,17 @@
       <span class="indispensable">必須</span>
     </div>
     <div class='input-birth-wrap'>
-<%= f.date_select :birth_date, start_year: 1930, end_year: Time.now.year - 5, use_month_numbers: true, prompt: { year: '--', month: '--', day: '--' }, class: 'select-birth', id: 'birth-date', date_separator: ' ' %>
-
+<%= raw sprintf(
+                      f.date_select(
+                        :birth_date,
+                        class:'select-birth',
+                        id:"birth-date",
+                        use_month_numbers: true,
+                        prompt:'--',
+                        start_year: 1930,
+                        end_year: (Time.now.year - 5),
+                        date_separator: '%s'),
+                      "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
     </div>
     <p class='info-text'>※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
   </div>
