--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,12 +8,13 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう 
+      <% if @item.purchase.present? %> <!-- 売却済みかどうかを確認 -->
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-         商品が売れている場合は、sold outを表示しましょう %>
+        <% end %>
     </div>
+
     <div class="item-price-box">
       <span class="item-price">
         ¥ <%= @item.price %>
@@ -23,6 +24,7 @@
       </span>
     </div>
 <% if user_signed_in? %>
+<% if @item.purchase.nil? %>
 <% if current_user.id == @item.user_id %>
     <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
@@ -31,8 +33,10 @@
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <%= link_to "購入画面に進む", item_purchases_path(@item) ,data: { turbo: false },class:"item-red-btn"%>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
-<% end %>
-<% end %>
+    <% end %>
+    <% end %>
+    <% end %>
+
     <div class="item-explain-box">
       <span><%= @item.description%></span>
     </div>
